--- a/src/toast/ToastComp.scss
+++ b/src/toast/ToastComp.scss
@@ -6,6 +6,6 @@
   top: 10px;
   z-index: $z-index-toast;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  border: 1px solid $hight-light-color;
+  border: 1px solid rgba(108, 144, 53, 0.238);
   backdrop-filter: blur(2px);
 }
